<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.qcadoo.maven</groupId>
        <artifactId>qcadoo-super-pom</artifactId>
        <version>0.0.1</version>
    </parent>

    <groupId>com.qcadoo.mes</groupId>
    <artifactId>mes</artifactId>
    <version>1.5-SNAPSHOT-DEV</version>
    <packaging>pom</packaging>

    <name>Qcadoo MES</name>

    <description/>

    <url>https://github.com/qcadoo/mes</url>

    <organization>
        <name>Qcadoo Limited</name>
        <url>http://www.qcadoo.com/</url>
    </organization>

    <inceptionYear>2010</inceptionYear>

    <licenses>
        <license>
            <name>GNU Affero General Public License</name>
            <url>https://github.com/qcadoo/qcadoo/raw/master/licence.txt</url>
        </license>
    </licenses>

    <modules>
        <module>mes-plugins</module>
        <module>mes-application</module>
    </modules>

    <properties>
        <qcadoo.buildVersionForUser>1.9.12-DEV</qcadoo.buildVersionForUser>
        <qcadoo.version>${project.version}</qcadoo.version>
        <qcadoo.plugin.version>1.5</qcadoo.plugin.version>
        <qcadoo.maven.plugin.version>1.5-SNAPSHOT</qcadoo.maven.plugin.version>
        <profile.name>tomcat</profile.name>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugin</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-localization</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-security</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-view</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-report</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-menu-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-user-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-dictionary-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-custom-translation</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-custom-translation-management</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-plugins-export</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-commons</artifactId>
            <version>${qcadoo.version}</version>
        </dependency>
        <dependency>
            <groupId>com.qcadoo</groupId>
            <artifactId>qcadoo-testing</artifactId>
            <version>${qcadoo.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>${aspectj.maven.plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <complianceLevel>1.8</complianceLevel>
                    <aspectLibraries>
                        <aspectLibrary>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-aspects</artifactId>
                        </aspectLibrary>
                        <aspectLibrary>
                            <groupId>org.springframework.security</groupId>
                            <artifactId>spring-security-aspects</artifactId>
                        </aspectLibrary>
                    </aspectLibraries>
                    <showWeaveInfo>true</showWeaveInfo>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test-compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>qcadoo-releases-repository</id>
            <url>http://nexus.qcadoo.org/content/repositories/releases</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>com.logdigger</id>
            <url>http://maven.logdigger.com/repos</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>atlassian</id>
            <url>https://maven.atlassian.com/repository/public</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
                <updatePolicy>never</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <scm>
        <connection>scm:git:ssh://github.com/qcadoo/mes.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/qcadoo/mes.git</developerConnection>
        <url>http://github.com/qcadoo/mes</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>qcadoo-releases-repository</id>
            <url>http://nexus.qcadoo.org/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>qcadoo-snapshots-repository</id>
            <url>http://nexus.qcadoo.org/content/repositories/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>profile</id>
            <activation>
                <property>
                    <name>profile</name>
                </property>
            </activation>
            <properties>
                <profile.name>${profile}</profile.name>
            </properties>
        </profile>
    </profiles>

</project>
